src/.vuepress/styles/index.styl
body, html, #app {
  height: 100%;
  font-family: 'Helvetica';
}

pre, code {
  font-family: Hack, monospace;
}

video, iframe {
  display: flex;
  margin: auto;
}

.theme-default-content {
    h1, h2, h3, h4, h5, h6 {
      padding-bottom: 1rem;
      border-bottom: none;
    }
    img {
      display: flex;
      margin: auto;
    }
    figcaption {
      text-align: center;
    }
}

.danger {
  margin-bottom: 15px;
  padding: 4px 12px;
  background-color: #ffdddd;
  border-left: 6px solid #f44336;
}

.success {
  margin-bottom: 15px;
  padding: 4px 12px;
  background-color: #ddffdd;
  border-left: 6px solid #4CAF50;
}

.info {
  margin-bottom: 15px;
  padding: 4px 12px;
  background-color: #e7f3fe;
  border-left: 6px solid #2196F3;
}

.warning {
  margin-bottom: 15px;
  padding: 4px 12px;
  background-color: #ffffcc;
  border-left: 6px solid #ffeb3b;
}

.theme-container.homepage {

  height: 100%;

  .navbar {
    border-bottom: none;
  }

  .hero {
    img {
      width: 50%;
      object-fit: cover;
      margin: 30px auto;
    }
    .description {
      color: #afafaf;
    }
  }
  .home {
    display: flex;
    justify-content: center;
    align-items: flex-start;
    height: 100%;
    max-width: 100%;
    padding-top: 3.7rem;
  }
  .features {
    padding: 0.5rem 1rem;
  }
}

